--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,5 +1,11 @@
+ body {
+    font-family: 'Roboto', sans-serif;
+ }
+ 
  html {
-    background-color: #4a454b;
+     display: flex;
+     justify-content: center;
+     background: white;
 }
 
 li {
@@ -10,5 +16,80 @@ li {
 }
 
 ul {
-    
+    margin-left: 450px;
+    margin-top: -60px;
+    margin-right: 90px;
 }
+
+.back {
+    background: url("../img/egorlox2.png");
+    background-size: cover;
+    height: 800px;
+}
+
+.logo {
+    margin-left: 120px;
+    margin-top: 30px;
+}
+
+.timer {
+    display: flex;
+    justify-content: center;
+    padding-top: 100px;
+}
+
+.sing {
+    height: 500px;
+    width: 400px;
+    background: white;
+    margin-left: 800px;
+    margin-top: 100px; 
+    box-shadow: 0 0 10px rgba(0,0,0,0.5); 
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.name {
+        
+    height: 50px;
+    width: 300px; 
+    background: white;
+    border: 1px solid greenyellow;
+    border-radius: 7px;
+}
+
+.ikon1 {
+    height: 50px;
+    width: 300px; 
+    background: white;
+    border: 1px solid lightgray;
+    border-radius: 7px;
+}
+
+.ikon2 {
+    height: 50px;
+    width: 300px; 
+    background: white;
+    border: 1px solid lightgray;
+    border-radius: 7px;
+}
+
+.ikon3 {
+    height: 50px;
+    width: 300px; 
+    background: white;
+    border: 1px solid lightgray;
+    border-radius: 7px;
+}
+
+.letme {
+    height: 50px;
+    width: 300px; 
+    background: greenyellow;
+    border: 1px solid greenyellow;
+    border-radius: 7px;
+}
+
